fixed bandcamp headline on nav-collapse

--- a/assets/css/_albums.scss
+++ b/assets/css/_albums.scss
@@ -9,6 +9,11 @@
     width: 100%;
     height: auto;
   }
+  .section__header {
+    @include nav-collapse {
+      padding-left: 5%;
+    }
+  }
 }
 
 .album-carousel {
