--- a/assets/css/_recommendations.scss
+++ b/assets/css/_recommendations.scss
@@ -6,7 +6,7 @@
   align-items: center;
   font-family: arial;
   transition: height 0.5s;
-  padding: 40px 0;
+  padding: 60px 0;
   @include tablet {
     padding: 40px 5%;
   }
